--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@ionic-native/qr-scanner": "^4.14.0",
     "@ionic-native/splash-screen": "4.9.1",
     "@ionic-native/status-bar": "4.10.0",
-    "@ionic/storage": "^2.1.3",
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
     "cordova-android": "7.1.1",
@@ -50,7 +49,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.7.2",
-    "cordova-sqlite-storage": "2.5.2",
+    "cordova-sqlite-storage": "^2.5.2",
     "firebase": "5.2.0",
     "g": "^2.0.1",
     "ion-affix": "1.1.1",
