--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.7.2",
-    "cordova-sqlite-storage": "^2.5.2",
     "firebase": "5.2.0",
     "g": "^2.0.1",
     "ion-affix": "1.1.1",
@@ -89,8 +88,7 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-camera": {},
-      "cordova-sqlite-storage": {}
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
