--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic-native/status-bar": "4.10.0",
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
+    "cordova-android": "7.1.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
@@ -87,6 +88,8 @@
       },
       "cordova-plugin-camera": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
