--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-native-spinner": "^1.1.3",
     "cordova-plugin-qrscanner": "^2.6.0",
@@ -86,7 +87,8 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android"
