--- a/package.json
+++ b/package.json
@@ -35,12 +35,10 @@
     "@ionic-native/status-bar": "4.10.0",
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
-    "cordova-android": "7.1.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-native-spinner": "^1.1.3",
     "cordova-plugin-qrscanner": "^2.6.0",
@@ -87,11 +85,8 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-camera": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-camera": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
