--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
     "cordova-android": "^7.1.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
@@ -89,7 +90,7 @@
       "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "ios"
     ]
   }
 }
