--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@ionic-native/status-bar": "4.10.0",
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
-    "cordova-android": "^7.1.4",
+    "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
