--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular-devkit/schematics-cli": "^0.12.2",
     "@angular/common": "6.0.9",
     "@angular/compiler": "6.0.9",
-    "@angular/compiler-cli": "6.0.9",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/core": "6.0.9",
     "@angular/forms": "6.0.9",
     "@angular/http": "6.0.9",
@@ -31,6 +31,7 @@
     "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "4.10.0",
     "@ionic-native/firebase": "4.10.0",
+    "@ionic-native/local-notifications": "^4.20.0",
     "@ionic-native/qr-scanner": "^4.14.0",
     "@ionic-native/splash-screen": "4.9.1",
     "@ionic-native/status-bar": "4.10.0",
@@ -38,10 +39,12 @@
     "cordova": "^8.1.2",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-native-spinner": "^1.1.3",
     "cordova-plugin-qrscanner": "^2.6.0",
     "cordova-plugin-spinner-dialog": "^1.3.1",
@@ -70,7 +73,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.1",
+    "@ionic/app-scripts": "^3.2.2",
     "@ionic/lab": "^1.0.11",
     "typescript": "2.7.2"
   },
@@ -88,7 +91,8 @@
       },
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "ios",
