--- a/package.json
+++ b/package.json
@@ -37,39 +37,36 @@
     "@ionic-native/status-bar": "4.10.0",
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
-    "cordova-android": "7.1.4",
-    "cordova-ios": "4.5.5",
+    "cordova-android": "^7.1.4",
     "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-webview": "^2.3.1",
-    "cordova-plugin-local-notification": "0.9.0-beta.2",
-    "cordova-plugin-native-spinner": "^1.1.3",
+    "cordova-plugin-native-spinner": "1.1.3",
     "cordova-plugin-qrscanner": "^2.6.0",
     "cordova-plugin-spinner-dialog": "^1.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-toast": "^2.7.2",
     "firebase": "5.2.0",
     "g": "^2.0.1",
     "ion-affix": "1.1.1",
     "ion2-calendar": "^2.2.0",
     "ionic": "^4.2.1",
     "ionic-angular": "3.9.2",
-    "ionic-plugin-keyboard": "^2.2.1",
+    "ionic-plugin-keyboard": "2.2.1",
     "ionicons": "3.0.0",
     "moment": "^2.23.0",
     "ngx-avatar": "^3.2.0",
     "ngx-clipboard": "9.0.1",
     "ngx-mask-ionic": "^1.1.1",
     "node-sass": "^4.11.0",
-    "phonegap-plugin-barcodescanner": "^8.0.1",
     "promise-polyfill": "8.0.0",
     "rxjs": "6.2.2",
     "rxjs-compat": "6.2.2",
     "sw-toolbox": "3.6.0",
+    "x-toast": "1.0.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -80,22 +77,18 @@
   "description": "Pre-designed UI elements for Ionic 3 framework..",
   "cordova": {
     "plugins": {
-      "cordova-plugin-native-spinner": {},
-      "cordova-plugin-x-toast": {},
-      "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "phonegap-plugin-barcodescanner": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-badge": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-native-spinner": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-compat": {}
     },
     "platforms": [
-      "ios",
       "android"
     ]
   }
