--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@ionic-native/barcode-scanner": "^4.14.0",
     "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "4.10.0",
-    "@ionic-native/firebase": "4.10.0",
+    "@ionic-native/device": "^4.20.0",
+    "@ionic-native/firebase": "^4.10.0",
     "@ionic-native/local-notifications": "^4.20.0",
     "@ionic-native/qr-scanner": "^4.14.0",
     "@ionic-native/splash-screen": "4.9.1",
@@ -38,10 +39,12 @@
     "angularfire2": "5.0.0-rc.11",
     "cordova": "^8.1.2",
     "cordova-android": "^7.1.4",
+    "cordova-android-support-gradle-release": "^2.0.1",
     "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-native-spinner": "1.1.3",
     "cordova-plugin-qrscanner": "^2.6.0",
@@ -83,10 +86,14 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-badge": {},
-      "cordova-plugin-device": {},
       "cordova-plugin-native-spinner": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-compat": {}
+      "cordova-plugin-compat": {},
+      "cordova-plugin-firebase": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "26.1.0"
+      },
+      "cordova-plugin-device": {}
     },
     "platforms": [
       "android"
